<resources>
    <string name="app_name">KnitGrid</string>
    <string name="activity_pattern_detail_pattern_button_text">Pattern</string>
    <string name="activity_pattern_detail_legend_button_text">Legend</string>
    <string name="activity_pattern_detail_navigation_collapse_button_text">...</string>
    <string name="instructions_title">Instructions</string>
    <string name="nav_stitch_glossary">Stitch Details</string>
    <string name="pattern_create_dialog_name_hint">Name</string>
    <string name="create_pattern_rows_label">Rows</string>
    <string name="create_pattern_columns_label">Columns</string>
    <string name="save_button">Save</string>
    <string name="create_pattern_dialog_title">Create Pattern</string>
    <string name="create_pattern_dialog_positive_button">Create</string>
    <string name="show_even_rows_checkbox_label">Show even rows</string>
    <string name="knit">knit</string>
    <string name="activity_pattern_list_published_success">Pattern published!</string>
    <string name="activity_pattern_list_publish_failure">Sorry! There was an error publishing online.</string>
    <string name="activity_pattern_list_already_published">Sorry! That pattern has already been published.</string>
</resources>
