<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/patternViewBackground"
    tools:context=".activities.PatternDetailActivity">

    <LinearLayout
        android:id="@+id/activity_pattern_detail_navigation_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:elevation="7dp">

        <Button
            android:id="@+id/activity_pattern_detail_pattern_button"
            style="@style/TabNavigationButton"
            android:text="@string/activity_pattern_detail_pattern_button_text" />

        <Button
            android:id="@+id/activity_pattern_detail_legend_button"
            style="@style/TabNavigationButton"
            android:text="@string/activity_pattern_detail_legend_button_text" />

        <Button
            android:id="@+id/activity_pattern_detail_navigation_collapse_button"
            style="@style/TabNavigationButton"
            android:text="@string/activity_pattern_detail_navigation_collapse_button_text" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/activity_pattern_detail_content_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_pattern_detail_navigation_linear_layout" />

</RelativeLayout>
