<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_pattern_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pattern_create_dialog_name_hint"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/rows_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_pattern_rows_label"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/columns_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_pattern_columns_label"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:weightSum="2">-->

    <!--<TextView-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:text="@string/create_pattern_rows_label"/>-->

    <!--<TextView-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:text="@string/create_pattern_columns_label"/>-->
    <!--</LinearLayout>-->


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="2"-->
    <!--android:orientation="horizontal">-->


    <!--<EditText-->
    <!--android:id="@+id/rows_edit_text"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:inputType="number"/>-->

    <!--<EditText-->
    <!--android:id="@+id/columns_edit_text"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:inputType="number"/>-->
    <!--</LinearLayout>-->

    <CheckBox
        android:id="@+id/checkbox_show_even_rows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_even_rows_checkbox_label"/>
</LinearLayout>
